# L2

./: .env.example  .gitignore  AGENT_CHAT_READINESS_REPORT.md  AGENT_CHAT_UX_REPORT.md  AGENT_SCOPE_GUARD_REPORT.md  ARCHITECTURE.md  DEMO_READINESS_REPORT.md  FRONTEND_BRAND_AUDIT.md  HACKATHON.md  KIMI_PROMPTS.md  KIMI_PROMPTS_AMENDMENT_01.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
app/: package.json  tailwind.config.js  vitest.config.ts
app/src/: theme.ts
app/src/agent/: context.ts  guards.ts  planner.smoke.test.ts  planner.ts  scope.ts  tools.ts  types.ts
app/src/app/: app.smoke.test.tsx  page.tsx  (+2 more)
docs/: AGENT_CHAT_INVESTOR_DEMO.md  DEMO_RECORDING_GUIDE.md  DEMO_STORYBOARD.md  DEMO_VIDEO_SCRIPT.md  demo-video-script.md
programs/l2conceptv1/: Cargo.toml
programs/sable/: Anchor.toml  Cargo.toml
programs/sable/src/: error.rs  events.rs  lib.rs  policy.rs  state.rs
programs/sable/src/instructions/agent/: agent_transfer.rs  agent_transfer_batch.rs  close_agent.rs  defund_agent.rs  freeze_agent.rs  fund_agent.rs  mod.rs  revoke_agent.rs  set_policy.rs  spawn_agent.rs  unfreeze_agent.rs
programs/sable/src/instructions/auction/: cancel_task.rs  commit_bid.rs  create_task.rs  mod.rs  reveal_bid.rs  settle_auction.rs
programs/sable/tests/: auction-commit.ts  auction-full.ts  sable.ts
scripts/: create-test-mint.ts  deploy-devnet.sh  idl-sync.js  init-devnet.ts
services/payments-api-mock/: package.json
tests/integration/: 02-agents.spec.ts  04-auctions.spec.ts  08-private-payments-api.spec.ts
(+40 files in other folders)
