[package]
name = "sable"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
blake3 = "=1.5.5"
ephemeral-rollups-sdk = { version = "0.10.9", features = ["anchor"] }
indexmap = "=2.11.4"
solana-address = "=2.5.0"
solana-hash = "=4.0.1"
solana-instruction-error = "=2.0.0"
solana-pubkey = "=4.0.0"
toml_datetime = "=1.0.1+spec-1.1.0"
unicode-segmentation = "=1.12.0"
toml_parser = "=1.0.10+spec-1.1.0"
wincode = "=0.4.9"
wincode-derive = "=0.4.3"

# NOTE: The following pins are required because cargo-build-sbf bundles cargo 1.84.0,
# which cannot parse manifests using `edition = "2024"`. Several transitive dependencies
# of ephemeral-rollups-sdk have adopted edition2024. These pins force compatible versions.
# This workaround can be removed once platform-tools ships cargo >= 1.85.0.
